# symposium

./: .gitignore  Cargo.toml
.cargo/: config.toml
.github/: PULL_REQUEST_TEMPLATE.md
cargo-agents-testlib/src/: lib.rs
md/: SUMMARY.md  about.md  defining-skills.md  install.md  introduction.md
md/crate-authors/: publishing-hooks.md
md/design/: cargo-workflow-flow.md  configuration-loading.md  current-status.md  implementation-overview.md  important-flows.md  module-structure.md  session-state.md  skill-nudge-flow.md  state.md  symposium-start-flow.md
md/reference/: cargo-agents-hook.md  cargo-agents-init.md  cargo-agents-sync.md  cargo-agents.md  configuration.md  skill-matching.md
src/: agents.rs  cargo_fmt.rs  cli.rs  config.rs  hook.rs  hook_schema.rs  init.rs  lib.rs  main.rs  mcp.rs  plugins.rs  rust_fmt.rs  session_state.rs  skills.rs  sync.rs
src/hook_schema/: claude.rs  copilot.rs  gemini.rs
src/symposium-acp-agent/src/config_agent/: tests.rs
src/symposium-math/src/: server.rs
symposium-testlib/src/: lib.rs
tests/: dispatch.rs  hook_activation.rs  hook_nudge.rs  init_sync.rs
tests/fixtures/plugins0/dot-cargo-agents/plugins/: session-start.toml
